relocate search bar

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             justify-content: space-between;
             width: 100%;
             max-width: 1200px;
-            margin-bottom: 20px;
+            margin: 60px 0;
         }
 
         h1 {
@@ -262,16 +262,16 @@
     <header>
         <div>
             <h1>Periodict</h1>
-            <div class="search-display" id="search-display"></div>
         </div>
         <div class="actions">
             <button class="button" id="settings-button">⚙️</button>
         </div>
     </header>
-
+    
     <div class="periodic-table" id="periodic-table">
         <!-- The periodic table elements will be dynamically generated here -->
     </div>
+    <div class="search-display" id="search-display"></div>
 
     <!-- Settings Modal -->
     <div class="modal" id="settings-modal">
